Tried to fix stylesheet issues

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filterable Gallery</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="">
     <div class="nav">
-        <img src="/assets/logo.png" alt="GDSC Logo" class="nav-img">
+        <img src="./assets/logo.png" alt="GDSC Logo" class="nav-img">
         <h1 id="title">Filterable Gallery</h1>
         <div class="theme-switch-wrapper">
             <label class="theme-switch" for="checkbox">
